# FairRoom

./: .gitignore  README.md  package-lock.json  userStories.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture-alignment.yml  bug-report.yml  config.yml  feature-story.yml
.github/workflows/: main.yml  pr-metadata.yml
client/: .env.example  Dockerfile  index.html  package-lock.json  package.json  railway.toml  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/api/: auth-storage.ts  client.ts  config.ts  contracts.ts  errors.ts  fairroomApi.ts
contracts/: fairroom.openapi.yaml
server/: .env  Cargo.toml  Dockerfile  railway.toml  rust-toolchain.toml
server/migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20220101_000002_create_booking_table.rs  m20220101_000002_create_room_table.rs  m20220101_000003_create_booking_table.rs  m20220101_000003_create_room_table.rs  m20260330_191622_create_strike_table.rs  m20260330_191643_create_reminder_table.rs  m20260331_105253_create_room_time_slots_table.rs  m20260409_000001_add_booking_time_slot_trigger.rs  m20260410_000001_room_status_and_amenities.rs  m20260410_000002_fix_strike_revoked_at.rs  m20260410_000003_nullable_strike_revoked_at.rs
server/scripts/: init_db.sh
server/settings/: configuration.toml
server/src/: configuration.rs  db.rs  lib.rs  main.rs
server/src/entity/: amenity.rs  booking.rs  mod.rs  prelude.rs  reminder.rs  room.rs  room_amenity.rs  room_time_slots.rs  sea_orm_active_enums.rs  strike.rs  user.rs
server/src/models/: booking.rs  mod.rs  reminder.rs  role.rs  room.rs  strike.rs  user.rs
server/src/routes/: admin.rs  auth.rs  bookings.rs  helper.rs  lib.rs  me.rs  mod.rs  models.rs  rooms.rs
server/tests/: health_check.rs
(+244 files in other folders)
