[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fairroom"

[dependencies]
axum = "0.8.8"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
